--- a/Labs/LaTeX/Script/how_to_latex.tex
+++ b/Labs/LaTeX/Script/how_to_latex.tex
@@ -70,19 +70,21 @@ morekeywords = {maketitle, tableofcontents, subsection,
 
 
 \begin{fullwidth}
-Course material for the MSc model Research Skills, University of Freiburg (website \href{http://florianhartig.github.io/ResearchSkills/}{here})\\[0.5cm]
-Comments / questions to:\\[0.5cm]
-\href{https://florianhartig.wordpress.com/}{Florian Hartig}\\
-University of Freiburg\\
-Germany
+These lecture notes are part of the course material for the MSc module Research Skills (website \href{http://florianhartig.github.io/ResearchSkills/}{here}). First edition 2015, this version was created \today.\\[0.5cm]
+\end{fullwidth}
 
+\begin{fullwidth}
+\href{http://www.uni-regensburg.de/biologie-vorklinische-medizin/theoretische-oekologie/mitarbeiter/hartig/index.html}{Florian Hartig}\\
+University of Regensburg
+Germany\\[0.2cm]
+If you find typos or have suggestions, please report them by creating a ticket \href{https://github.com/florianhartig/ResearchSkills/issues}{here}
 
 \end{fullwidth}
 
 
 \vfill
 \begin{fullwidth}
-Created 2014 by Paul Bauche based on the existing RS LaTeX exercise. Updates 2015 by Severin Hauenstein and Florian Hartig. This work is licensed under a Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.
+This notes were created 2014 by Paul Bauche based on the existing RS LaTeX exercise of FH. Updates 2015 by Severin Hauenstein and Florian Hartig. This work is licensed under a Creative Commons Attribution-NonCommercial-NoDerivatives 4.0 International License.
 \end{fullwidth}
 
 \tableofcontents
