--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -32,7 +32,7 @@
 
 \title{Research skills\\
 \large{An introduction to the crafts of a scientist}}
-\author{Florian Hartig, University of Freiburg}
+\author{Florian Hartig}
 
 \begin{document}
 \let\cleardoublepage\clearpage
@@ -43,11 +43,11 @@
 \null
 
 \begin{fullwidth}
-These lecture notes are part of the course material for the MSc module Research Skills, University of Freiburg (website \href{http://florianhartig.github.io/ResearchSkills/}{here}). First edition 2015, version \today.\\[0.5cm]
+These lecture notes are part of the course material for the MSc module Research Skills (website \href{http://florianhartig.github.io/ResearchSkills/}{here}). First edition 2015, this version was created \today.\\[0.5cm]
 \end{fullwidth}
 
-\href{https://florianhartig.wordpress.com/}{Florian Hartig}\\
-University of Freiburg\\
+\href{http://www.uni-regensburg.de/biologie-vorklinische-medizin/theoretische-oekologie/mitarbeiter/hartig/index.html}{Florian Hartig}\\
+University of Regensburg
 Germany\\[0.2cm]
 If you find typos or have suggestions, please report them by creating a ticket \href{https://github.com/florianhartig/ResearchSkills/issues}{here}
 
@@ -88,21 +88,19 @@ Science [mass noun] - the intellectual and practical activity encompassing the s
 Science is a process for learning about nature in which competing ideas about how the world works are measured against observation.
 \end{quote}
 
-Science is thus a method to find out how the natural world world works, based on observations. The latter distinguishes the sciences from the arts (e.g. painting, music, dance), and from the humanities that study aspects of human culture (e.g. languages, literature, philosophy and history).\marginnote{Social sciences and natural sciences use the same approaches, but study different systems.}
- The distinction between humanities and sciences has become blurry, however, because fields such as linguistics, economics or sociology have moved towards the same formal approaches that are used by the natural sciences. For these fields, the term "social sciences" is now commonly used. 
+Science is thus a method to find out how the natural world works, based on observations. The latter distinguishes the sciences from the arts (e.g. painting, music, dance), and from the humanities that study aspects of human culture (e.g. languages, literature, philosophy and history).\marginnote{Social sciences and natural sciences use the same approaches, but study different systems.} The classic distinction between humanities and sciences, however, has become blurry in recent decades, because fields such as linguistics, economics or sociology are increasingly using the same formal empirical approaches that are used in the natural sciences. For these new fields, the term "social sciences" is now commonly used. 
 
-The increasing adaptation of scientific methods, also in disciplines that are not classically counted to the natural sciences, has good reasons.\marginnote{Epistemology, from Greek episteme = knowledge and logos = word is the branch of philosophy concerned with what knowledge is, how it can be acquired, and what can be known} In the last centuries, the scientific method has been the reason for an unprecedented increase in knowledge, opportunity and human well-being. As a result, science has become the most widely accepted answer to what one can know and how to find it out (epistemology), at least in the western world. 
+The increasing adaptation of scientific methods, also in disciplines not classically counted to the natural sciences, has good reasons.\marginnote{Epistemology, from Greek episteme = knowledge and logos = word is the branch of philosophy concerned with what knowledge is, how it can be acquired, and what can be known} In the last centuries, the scientific method has sparked an increase in knowledge, opportunity and human well-being that is unprecedented in human history. As a result, today, science has become the most widely accepted answer to what one can know and how to find it out (epistemology), at least in the western world. 
 
+Yet, science is not only a method, but also a human endeavor. As such, ``science" may also refer to the history of science, the state of scientific knowledge, or science as a social institution. Those latter aspects of science are less formally defined and stable than science as a method - if we look at the history of science, we can see individuals that are unified by a common cause, but that are at the same time subject to their national and cultural influences as well as by personal vanity, pride or madness.\marginnote{Many famous scientists engaged in personal and irrational feuds. For example, the doubtlessly ingenious Isaac Newton engaged in countless spiteful and bitter fights, including his most famous battle with German mathematician Gottfried Leibniz over the invention of infinitesimal calculus.} I will refer you through some famous cases in the course of this text. As a result, the history of science, as well as its present state, is complicated by personal preferences, political games and random events, in much the same way as we observe it in political or economic history. 
 
-Science is also a human endeavor. ``Science" may as well refer to the history of science, the state of scientific knowledge, or science as a social institution. Those latter aspects of science are less formally defined and stable that science as a method - if we look at the history of science, we see individuals that are unified by a common cause, but that are at the same time subject to their national and cultural influences as well as by personal vanity, pride or madness.\marginnote{Many famous scientists engaged in personal and irrational feuds. For example, the doubtlessly ingenious Isaac Newton engaged in countless spiteful and bitter fights, including his most famous battle with German mathematician Gottfried Leibniz over the invention of infinitesimal calculus.} As a result, the history of science, as well as its present state, is complicated by personal preferences, power games and random events, in the same way as political and economic history is. 
-
-In the center of science, however, remains a set of assumptions and methods, a philosophy if you will, that allows us to draw and agree on conclusions from empirical observations. Not every scientist is aware of the ``formal rules" of these methods, but that does not mean that (s)he would not apply them. In his book "Induction \& Intuition in Scientific Thought", Peter Medawar notes: 
+In the center of science, however, remains a set of assumptions and methods, a philosophy if you will, that allows us to draw and agree on conclusions from empirical observations. Not every scientist is aware of the ``formal rules" of these methods, but that does not mean that (s)he would not apply them. In his book "Induction \& Intuition in Scientific Thought" \citep{Medawar-Inductionintuitionscientific-2013}, Peter Medawar notes: 
 
 \begin{quote}
 The fact that scientists do not consciously practice a formal methodology is very poor evidence that no such methodology exists. It could be said—has been said—that there is a distinctive methodology of science which scientists practice unwittingly, like the chap in Molière who found that all his life, unknowingly, he had been speaking prose.
 \end{quote}
 
-It may thus be possible to do science without having ever learned the basics of the scientific method. However, that does not mean you should not learn about the methods of science. An amateur can sometimes do great work, from intuition and practice, but without a good education s(he) may fail in other situations. Learning the rules of science will provide you with safeguards against drawing false conclusion, will teach you methods to make discovery and communication more efficient, and will arguable improve your general understanding of the world. Hence, read this manual for science with care, including the  rest of this chapter, which is devoted to laying out the assumptions and history of science, and discussing how the "scientific method" works. 
+It may thus be possible to do science without ever having learned the basics of the scientific method. Yet, that should not decrease your motivation to learn more about the methods of science. An amateur can sometimes do great work, from intuition and practice, but without a good education s(he) may fail in other situations. Learning the rules of science will provide you with safeguards against drawing false conclusion; it will teach you methods to make discovery and communication more efficient; and it will arguable improve your general understanding of the world. Hence, read this manual for science with care, including the  rest of this chapter, which is devoted to laying out the assumptions and history of science, and discussing how the "scientific method" works. 
 
 
 \section{Philosophical foundations of scientific thinking}
