Update links practicals

--- a/Labs/Statistics/Practicals/GraphicsInR/Rgraphics.Rmd
+++ b/Labs/Statistics/Practicals/GraphicsInR/Rgraphics.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(fig.width=5, fig.height=5)
 ```
 
 
-* *This practical tutorial of the [RS course](http://florianhartig.github.io/ResearchSkills/) is intended to be read together with the more detailed [Statstics lecture notes](https://github.com/florianhartig/ResearchSkills/raw/master/Labs/Statistics/Script/EssentialStatistics.pdf)*
+* *This practical tutorial of the [RS course](http://florianhartig.github.io/ResearchSkills/) is intended to be read together with the more detailed [Statstics lecture notes](https://www.dropbox.com/s/s38ge7pjgf55qs1/EssentialStatistics.pdf?dl=0)*
 
 * *To run the code demonstrated here, you should install R and RStudio*
 
