--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -292,19 +292,19 @@ In the heart of all that, however, remains the idea of creating ``near-certain''
 
 \chapter{On the shoulders of giants - the scientific literature}
 
-Science today is highly specialized. Most basic questions have long been solved. You may think of the scientific enterprise as a "house of knowledge", where one story is built on the next. This is often expressed by a famous quote by Isaac Newton in a letter to 
+Science today is highly specialized. Most basic questions have long been solved. You may think of the scientific enterprise as a "house of knowledge", where one story is built on the next. This is often expressed by a famous quote by Isaac Newton in a letter to Robert Hooke in 1676
 
 \begin{quote}
 If I have seen further it is by standing on the shoulders of Giants.\footnote{The origin of this expression dates back to at least the 12th century, but Newton's use in a letter to his rival Robert Hooke in 1676 is the most famous application. While it is generally interpreted as a sign of humility, some authors have argued that this quote was actually a personal insult against Hooke, who was hunchbacked and of slight build. Against this idea stands that Hooke and Newton, although bitter enemies later in their lives, were on good terms at this time.}
 \end{quote}
 
-Science Newton's time, many giants and even more dwarfs have been added on the pile. Scientists today are hardly explorers that go far on unmarked territory. Most areas have been charted already, and much scientific work concentrates on refining our understanding of particular natural phenomena. 
+Science Newton's time, many giants and even more dwarfs have climbed on this "human pyramid". Scientists today are hardly explorers that go far on unmarked territory - the basic charts of most scientific territories have been drawn already, and thus much scientific work concentrates on refining our understanding of particular phenomena. 
 
-This is not to say that there are no discoveries left. You should search for the big new idea (see next section), and maybe you are lucky enough to find one. But you have to anticipate that any idea you have may have appeared to someone else as well. Before you start a new research project, you should therefore find out what has already been done in on the question you are interested in, to understand better what you are doing, but also to avoid doing something that has already been done. 
+This is not to say that there are no discoveries left. There will always be some areas that have either been overlooked before, or have only now become accessible due to technological progress. You should search for these big new ideas (see next section), and maybe you are lucky enough to find one. But you have to anticipate that any idea you have may have appeared to someone else as well. Before you start a new research project, you should therefore find out what has already been done in on the question you are interested in, to understand better what you are doing, but also to avoid doing something that has already been done. 
 
 
 \section{Finding relevant literature}
-
+ 
 How to search for relevant literature depends on the your field. You may go into a library and open random books, check the libraries catalog, or speak with colleagues. In today's practice, however, you will likely use a search engine or database on the internet. Basically, there are three main options: 
 
 \begin{itemize}
@@ -340,6 +340,15 @@ Taking larger passages / ideas from a source without making this clear is plagia
 \paragraph{Self-plagiarism:} A fact that is sometimes forgotten is that the same rules apply if the original author is you! If you copy larger passages from your own work without properly citing it is also considered plagiarism! 
 
 \paragraph{Citation Signals} Citations can be modified by citation signals. An example is the signal ``but'', as in ``It is like it is (but see Adams, 2009)”. These signals are meant to clarify the meaning of a citation, e.g. as supportive, related, or even contradicting the statement made in the main work. Citation signals are therefore crucial, and wrong use can also constitute misconduct! (a few of the high-profile cases with politicians turned around a cf. that was inserted although it should be a direct citation). A list of explanations of the different signals is provided \href{http://en.wikipedia.org/wiki/Citation_signal}{here}. Some of the most important are:
+
+
+\begin{itemize}
+  \item \textbf{[no signal]} the cited reference directly states the proposition
+  \item \textbf{[e.g.]} latin for "exempli gratia" (for example) signals that the cited reference directly states the proposition, but there would be other references that would equally support it
+  \item \textbf{[see]} the cited reference does not directly state the proposition, but clearly supports it
+  \item \textbf{[cf.]} latin for "confer" (compare) the cited reference states a different proposition that, however, is sufficiently analogous to the cited proposition
+  \item \textbf{[but see / cf.]} same rules as [see] and [cf.], but reference is contradictory to the proposition. If you know of contradictory references to a proposition you want to make, you should introduce such a citation
+\end{itemize}
 
 \paragraph{You should read the papers you cite and cite them correctly} A recurrent problem, both in student's assignments and in the academic literature, is that papers are cited too broadly or wrongly. \citet{Editorial-Causecorrelationconjecture-2015} gives an account of that. \citet{Greenberg-Howcitationdistortions-2009} examine citation networks of papers that are miss-cited. The bottomline is: 1) sure you read the papers that you cite. 2) cite specifically, e.g. by noting in a short sentence for what you cite a paper or what they found, instead of writing only (see also Smith, 2001). 
 
@@ -855,7 +864,7 @@ In the following, I highlighted \uline{redundant words} and other problems
 
 \item A \uline{subsequent} ANOVA \uline{analysis} \textbf{enabled a quantification of} the impacts of the varied factors (quantified)
 
-\item There are \uline{a number of records} in the literature \uline{focusing on comparisons} between \uline{sets of }modeling approaches while predicting biomass at plot scale (A number of previous studies has compared modeling approaches to predict biomass at the plot scale)
+\item There are \uline{a number of} records in the literature \uline{focusing on comparisons} between \uline{sets of }modeling approaches while predicting biomass at plot scale (A number of previous studies has compared modeling approaches to predict biomass at the plot scale)
 
 \item \uline{As such}, the \uline{explicit} findings of our two experiments showed that \uline{a total of} 9 samples ... 
 
