--- a/LectureNotes/ResearchSkills.tex
+++ b/LectureNotes/ResearchSkills.tex
@@ -84,15 +84,15 @@ The Oxford dictionary defines science as
 Science [mass noun] - the intellectual and practical activity encompassing the systematic study of the structure and behavior of the physical and natural world through observation and experiment.
 \end{quote}
 
-\noindent Or, in the words of Richard Feynman:\marginnote{Richard Feynman, an American physicist, was famous for his contributions to quantum electrodynamics (Nobel price in 1965, together with Sin-Itiro Tomonaga and Julian Schwinger.) as well as for his somewhat colorful character.}
+\noindent Or, in the words of Richard Feynman:\marginnote{Richard Feynman, an American physicist, was famous for his contributions to quantum electrodynamics (Nobel price in 1965, together with Sin-Itiro Tomonaga and Julian Schwinger), as well as for his somewhat colorful character.}
 
 \begin{quote}
 Science is a process for learning about nature in which competing ideas about how the world works are measured against observation.
 \end{quote}
 
-In the classic division of university disciplines, the focus on systematic observation and experiments distinguishes the sciences from the arts (e.g. painting, music, dance), and from the humanities that study aspects of human culture (e.g. languages, literature, philosophy and history).\marginnote{Social sciences and natural sciences use the same approach on different study objects.} The division between humanities and sciences, however, has become blurry in recent decades, because fields such as linguistics, economics or sociology are increasingly using the same formal empirical approaches that are used in the natural sciences. For these new fields, the term "social sciences" is now commonly used. 
+In the classic division of disciplines, the sciences are distinguished from the arts (e.g. painting, music, dance) and the humanities (the studies of human culture, e.g. languages, literature, philosophy and history) by the focus on systematic observation and experiments.\marginnote{Today, social sciences and natural sciences use largely the same methodological approach, which is based on the analysis of observational and experimental data.} The division between humanities and sciences, however, has become blurry in recent decades, because fields such as linguistics, economics or sociology are increasingly using the same empirical approaches that are used in the natural sciences. For these new fields, the term "social sciences" is now commonly used. 
 
-The increasing adaptation of scientific methods, also in disciplines not classically counted to the natural sciences, has good reasons.\marginnote{Epistemology, from Greek episteme = knowledge, and logos = word is the branch of philosophy concerned with a) what knowledge is, b) how it can be acquired, and c) what can be known} In the last centuries, the scientific method has sparked an expansion of knowledge, opportunity and human well-being that is unprecedented in human history. The force of this phenomenon is likely underestimated by a present-day student in an industrial country, but consider that scientific progress has eradicated or rendered insignificant most diseases that used to plague large parts of the human population, it has in principle erased hunger (except for problems of distribution, which are human-made), and it has given us the freedom to move from manual labor to having the time to think about how cancer can be healed or the universe has been created. As a result, today, science has become the most widely accepted answer to what one can know and how to find it out (epistemology), at least in the western world. 
+The increasing adaptation of the methodological approach developed by the natural sciences, also by other disciplines, has good reasons.\marginnote{Epistemology, from Greek episteme = knowledge, and logos = word is the branch of philosophy concerned with a) what knowledge is, b) how it can be acquired, and c) what can be known} In the last centuries, the scientific method has sparked an expansion of knowledge, opportunity and human well-being that is unprecedented in human history. The force of this phenomenon is likely underestimated by a present-day student in an industrial country, but consider that scientific progress has eradicated or rendered insignificant most diseases that used to plague large parts of the human population, it has in principle erased hunger (except for problems of distribution, which are human-made), and it has given us the freedom to move from manual labor to having the time to think about how cancer can be healed or the universe has been created. As a result, today, science has become the most widely accepted answer to what one can know and how to find it out (epistemology), at least in the western world. 
 
 Yet, science is not only a method, but also a human endeavor. As such, ``science" may also refer to the history of science, the state of scientific knowledge, or science as a social institution. Those latter aspects of science are less formally defined and stable than science as a method - if we look at the history of science, we can see individuals that are unified by a common cause, but that are at the same time subject to their national and cultural influences as well as by personal vanity, pride or madness.\marginnote{Many famous scientists engaged in personal and irrational feuds. For example, the doubtlessly ingenious Isaac Newton engaged in countless spiteful and bitter fights, including his most famous battle with German mathematician Gottfried Leibniz over the invention of infinitesimal calculus.} I will refer you to some famous cases in the course of this text. As a result, the history of science, as well as its present state, is complicated by personal preferences, political games and random events, in much the same way as we observe it in political or economic history. 
 
@@ -624,6 +624,8 @@ A similar case\marginnote{A \href{https://en.wikipedia.org/wiki/List_of_fallacie
 \item False dilemma - example: if we want everything to be completely correct, we can stop doing science!
 \item False equivalence - example: no model is completely perfect, therefore there is no difference between using model A and B
 \item Strawman - proving an argument wrong that is similar, but not identical to that of the opponent -  example: A: Diversity can increase ecosystem function. B: my opponent suggests that diversity increases ecosystem services. But this is clearly wrong. Imaging a world where we have no HIV virus. Now, if I introduce the virus, we have more diversity. But human well-being is clearly lower!
+\item Red hering - changing the issue. Unlike the straw man, which distorts the opponent's position, the red hering moves to a similar, but ultimately irrelevant statement. Example: How could CO2 increase the global temperature when there have always been temperature fluctuations?
+
 \end{itemize}
 
 Getting to know these fallacies has many advantages: you will train your logical thinking in general. You will be able to spot these fallacies when used by others. And lastly, you will notice if you use them yourself, avoiding wrong conclusions and sloppy arguments. Therefore, I highly recommend looking at this material!
@@ -670,7 +672,7 @@ Blogs \marginnote{A collection of things that are worth checking out is provided
 
 Writing is an essential skill for an academic, as for many other professions. \marginnote{The importance of the written word does not seem to change at all in the modern world. The art of writing, similar to public speaking, seems to be one of the stable skills that one can think of.} Despite its central role, however, few master it well. Writing is a subtle art. It is likely useful to consider for writing advice of the sort given in this chapter, but do not fool yourself - becoming a skilled and effective writer will only result from a long process of observation, practice and reflection: read widely, and think about why some writers appeal to you more. Reflect critically on your own writing, and think about the things that you can improve. Write every day, with the dedication to do your best. The rest of this section is intended to help you start this journey. 
 
-\section{Some basic writing advice}
+\section{Attitude and mindset}
 
 \paragraph{Start writing early, and all the time} Writing\marginnote{My experience - not following this advice in a graduate thesis leads foreseeable into disaster!} structures your thinking, and you will find flaws in your logic that you didn't see before. "The time to begin writing an article is when you have finished it to your satisfaction. By that time you begin to clearly and logically perceive what it is that you really want to say." (Mark Twain)
 
@@ -692,7 +694,7 @@ Writing is an essential skill for an academic, as for many other professions. \m
 \paragraph{Style} Writing is difficult. Good writing is incredibly hard. If you think writing is no problem for you, you probably haven't even realized the extent of your writing problems. Read the following section twice!
 
 
-\section{Style}
+\section{Writing legible text}
 
 Style is personal, and there are many small aspects of style that we cannot cover in a short introduction. However, there are four basic aspects of style that I find are nearly always missing in undergraduate writing. Training them can improve the readability of your text dramatically. 
 
@@ -798,7 +800,8 @@ change, as ...\\[0.3cm]
 \noindent\textbf{Keywords:}\marginnote{Keywords for indexing purposes.} Biodiversity -- Coexistence -- Tropical ecology ...\\
 \end{quote}
 
-\noindent\textbf{Introduction}\\
+\noindent\textbf{Introduction}\\[0.3cm]
+
 Tropical forests\marginnote{Introduce the topic. Explain relevance. Remember intro should mirror the abstract, one sentence in the abstract = one paragraph intro} are among the most species-rich ecosystems of the world. According to XY (19XX), tropical forests make up fo x \% of the planet's biodiversity.\\
 ...
 
@@ -822,7 +825,7 @@ We ask the following questions:
 \item Question 3
 \end{enumerate}
 
-\noindent\textbf{Methods}\\
+\noindent\textbf{Methods}\\[0.3cm]
 
 This section is typically divided into
 
@@ -834,11 +837,14 @@ This section is typically divided into
 
 Make sure you have a link to the questions. Describe and shortly motivate, but don't discuss your results in relation to other options (if you want to do this, the limitation section of the discussion is the right place).
 
-\noindent\textbf{Results}\\
+\noindent\textbf{Results}\\[0.3cm]
 
 The presentation of the results should follow the questions at the end of the introduction. If you had three questions, you would typically make three subsections. You can shortly repeat the question, but do not defend the methods or interpret / discuss the results. 
 
-\noindent\textbf{Discussion}\\
+Regarding\marginnote{Important: do not explain what figures or results display, but write as clearly as possible what you found, and use figures and other elements (Tables, supplementary material) to support these findings. Bad: Fig. 1 plots y against x values. Good: greater x was associated with smaller y (Fig. 1).} question 1 (relative support of the proposed hypotheses), we found that hypotheses A was not supported by the data, as it neither produced species-area curves compatible with empirical observations (Fig. 2 a), nor did the predicted phylogenetic tree shapes match the phylogenies in our study region (compare phylogenies in Fig. 3a,b, see also supplementary material S1). For Hypotheses B ... 
+
+\noindent\textbf{Discussion}\\[0.3cm]
+
 In this study\marginnote{Summarize main conclusions}, we used method X to test whether prevalence of A is associated to factor B. Our main result is that there is a significant correlation of B with A. This correlation, however, was only found when factor C was also present.
 
 Our\marginnote{Discuss relation to other studies and scientific implications} findings support earlier findings of (X, 2005) and (Y, 2002) who also found a positive correlation between A and B. The fact that this correlation was only present in samples under conditions C may also explain previous opposite results such as (ZZ, 2006,2008), as neither of these previous studies controlled for C. The reason for this positive association and the fact that it is affected by C is still unknown. We speculate that mechanism R could be a reason for this. This idea is given further support by the observation that the correlation between A and B is affected by C. Such an effect would be expected if R is really the cause of this Correlation, as R is dependent on C (XAY, 1968).
@@ -986,7 +992,7 @@ Many\marginnote{The rules of the German Science Foundation (DFG) are available \
 \end{mdframed}
 
 
-\bibliographystyle{/Users/Florian/Home/Bibliography/Databases/bibstyles/elsart-harv-hyperlinks}
-\bibliography{/Users/Florian/Home/Bibliography/Databases/flo}
+\bibliographystyle{/Users/florian/Dropbox/Home/Bibliography/Databases/bibstyles/elsart-harv-hyperlinks}
+\bibliography{/Users/florian/Dropbox/Home/Bibliography/Databases/flo}
 
 \end{document}
