--- a/Labs/ProjectOrganization/ProjectTemplate/Readme.qmd
+++ b/Labs/ProjectOrganization/ProjectTemplate/Readme.qmd
@@ -3,6 +3,10 @@ title: "Project Organization"
 subtitle: "A guide on how to organize a reproducible research project"
 author: "Florian Hartig, University of Regensburg"
 format: 
+  gfm:
+    fig-format: png
+    embed-resources: true
+    self-contained-math: true
   pdf:
     toc: TRUE
     abstract: "This documents gives advice to ensure good project organization and reproducibility in a research project."
@@ -23,12 +27,11 @@ Although this sounds easy, experience shows that it is a pervasive problems in s
 
 -   Alston, J. M., & Rick, J. A. (2021). A beginner's guide to conducting reproducible research. Bulletin of the Ecological Society of America, 102(2), 1-14. [link](https://esajournals.onlinelibrary.wiley.com/doi/full/10.1002/bes2.1801)
 
-Further important globa steps: 
+Further important global steps:
 
-* Decide on a sesible folder structure (suggestion below)
-* Put your entire folder structure under version control (usually GIT, coupled with a repository such as GitHub or GitLab).
-* If you work with an IDE such as RStudio, create a project. The best idea is typically to create a project at the top level of your folder structure. Alternatively, some times it can make sense to have projects in subfolders (e.g. when you work with different programming languages / IDEs).
-
+-   Decide on a sensible folder structure (suggestion below)
+-   Put your entire folder structure under version control (usually GIT, coupled with a repository such as GitHub or GitLab).
+-   If you work with an IDE such as RStudio, create a project. The best idea is typically to create a project at the top level of your folder structure. Alternatively, some times it can make sense to have projects in subfolders (e.g. when you work with different programming languages / IDEs).
 
 # Folder Structure
 
@@ -55,10 +58,9 @@ Try out that everything works by using your first reference in your thesis / pub
 
 You should keep a journal / record of what you do daily.
 
-1. For laboratory projects, this is typically organized in a lab notebook, and most labs have specific standards for the notebook. [Here](https://www.ucc.ie/en/media/support/techtransfer/NotebookGuidelinesv1_000.pdf) a typical recommendation but please follow the standards in your lab
+1.  For laboratory projects, this is typically organized in a lab notebook, and most labs have specific standards for the notebook. [Here](https://www.ucc.ie/en/media/support/techtransfer/NotebookGuidelinesv1_000.pdf) a typical recommendation but please follow the standards in your lab
 
-2. For software projects, including all work done in the TE lab, a written lab notebook is less helpful because it does not integrate with the committ / issue tracker on code. However, it is still useful to have a record of daily work / interim results / ideas. What I recommend is to have a text or notebook file, where you daily track progress. Make sure this integrates with your issue tracker / version control! You can use any format, including OneNote, but make sure the notebook is kept locally and not on the cloud, and is included in the version control software. 
-
+2.  For software projects, including all work done in the TE lab, a written lab notebook is less helpful because it does not integrate with the committ / issue tracker on code. However, it is still useful to have a record of daily work / interim results / ideas. What I recommend is to have a text or notebook file, where you daily track progress. Make sure this integrates with your issue tracker / version control! You can use any format, including OneNote, but make sure the notebook is kept locally and not on the cloud, and is included in the version control software.
 
 ## Data
 
@@ -79,21 +81,21 @@ This folder should contain the complete code to create the results of your proje
 -   Read lab / lecture about reproducibility
 -   Read lab / lecture about good coding practice
 
-Special Comments for R projects or other script-based analysis: 
+Special Comments for R projects or other script-based analysis:
 
-* Use numbers in file names in the order in which they should be executed
-* Use seperate scripts for clearning, data preparation, and different analyses
-* Files should save all outputs automatically
+-   Use numbers in file names in the order in which they should be executed
+-   Use separate scripts for cleaning, data preparation, and different analyses
+-   Files should save all outputs automatically
 
 Example:
 
-1. 01-readingInData.R -> collects data and saves output
-2. 02-dataCleaning.R -> saves cleaned data for analysis
-3. 03-Analysis1.R -> produces Fig 1
-4. 03-Analysis2.R -> produces Fig 2
-5. 03-Analysis3.R -> produces Fig 3
+1.  01-readingInData.R -\> collects data and saves output
+2.  02-dataCleaning.R -\> saves cleaned data for analysis
+3.  03-Analysis1.R -\> produces Fig 1
+4.  03-Analysis2.R -\> produces Fig 2
+5.  03-Analysis3.R -\> produces Fig 3
 
-Note that the last 3 files get the same training number, because they don't depend on each other. 
+Note that the last 3 files get the same training number, because they don't depend on each other.
 
 Read also:
 
